# Librum

./: .clang-format  .gitignore  .gitmodules  ApplicationDiagram.drawio  CMakeLists.txt  Dockerfile  README.md  _clang-format  app_info.json  com.librumreader.librum.metainfo.xml  dependency_injection.hpp  fonts.qrc  it.changes  librum.desktop  librum_book_system  resources.qrc  unzip_and_move.bat
src/: CMakeLists.txt  dependency_injection.hpp  main.cpp  message_handler.hpp  resources.rc
src/adapters/: CMakeLists.txt  adapters_export.hpp
src/adapters/DTOs/: book_dto.hpp  folder_dto.hpp  highlight_dto.hpp  login_dto.hpp  rectf_dto.hpp  register_dto.hpp  tag_dto.hpp  user_dto.hpp  word_definition_dto.hpp
src/adapters/controllers/: ai_explanation_controller.cpp  ai_explanation_controller.hpp  app_info_controller.cpp  app_info_controller.hpp  authentication_controller.cpp  authentication_controller.hpp  book_controller.cpp  book_controller.hpp  dictionary_controller.cpp  dictionary_controller.hpp  external_book_controller.cpp  external_book_controller.hpp  folder_controller.cpp  folder_controller.hpp  free_books_controller.cpp  free_books_controller.hpp  library_controller.cpp  library_controller.hpp  page_controller.cpp  page_controller.hpp  settings_controller.cpp  settings_controller.hpp  tools_controller.cpp  tools_controller.hpp  user_controller.cpp  user_controller.hpp
src/adapters/data_models/: app_information.hpp
src/adapters/gateways/: ai_explanation_gateway.cpp  ai_explanation_gateway.hpp  app_info_gateway.cpp  app_info_gateway.hpp  authentication_gateway.cpp  authentication_gateway.hpp  book_storage_gateway.cpp  book_storage_gateway.hpp  dictionary_gateway.cpp  dictionary_gateway.hpp  folder_storage_gateway.cpp  folder_storage_gateway.hpp  free_books_storage_gateway.cpp  free_books_storage_gateway.hpp  highlight_storage_gateway.cpp  highlight_storage_gateway.hpp  library_storage_gateway.cpp  library_storage_gateway.hpp  settings_storage_gateway.cpp  settings_storage_gateway.hpp  user_gateway.cpp  user_gateway.hpp  user_storage_gateway.cpp  user_storage_gateway.hpp
src/adapters/models/: app_information.hpp
src/app/: CMakeLists.txt  main.cpp
src/app/controller/: CMakeLists.txt  test_request.cpp  test_request.hpp  testrequest.cpp
src/app/model/: CMakeLists.txt
src/app/view/: CMakeLists.txt  MGlobalProperties.qml  main.qml
src/application/: CMakeLists.txt  app_information.hpp  application_export.hpp  key_sequence_recorder.cpp  librum_application_pch.hpp  placeholder.cpp  settings.hpp  sidebar_state.cpp  sidebar_state.hpp  test_request.cpp
src/application/chapter_tree/: chapter_tree_model.cpp  chapter_tree_model.hpp
src/application/converters/: pdf_to_rum_converter.cpp  pdf_to_rum_converter.hpp
src/application/core/: CMakeLists.txt  Messages.sh  Okular5Config.cmake.in  OkularConfigureChecks.cmake  _clang-format  aboutdata.h  config-okular.h.cmake  document.cpp  document.hpp  kdocumentviewer.h  metadata_extractor.cpp  metadata_extractor.hpp  metainfo.yaml  okular.categories  okular.upd  okular_part.desktop  page.cpp  page.hpp  page_generator.cpp  page_generator.hpp  settings.h
src/application/include/: app_information.hpp  chapter_tree_node.hpp  placeholder.hpp
src/application/managers/: highlight_storage_manager.cpp  highlight_storage_manager.hpp  library_storage_manager.cpp  library_storage_manager.hpp
src/application/services/: ai_explanation_service.cpp  ai_explanation_service.hpp  app_info_service.cpp  app_info_service.hpp  authentication_service.cpp  authentication_service.hpp  book_service.cpp  book_service.hpp  dictionary_service.cpp  dictionary_service.hpp  folder_service.cpp  folder_service.hpp  free_books_service.cpp  free_books_service.hpp  library_service.cpp  library_service.hpp  settings_service.cpp  settings_service.hpp  tools_service.cpp  tools_service.hpp  user_service.cpp  user_service.hpp
src/application/utility/: api_error_code_converter.hpp  application_settings.hpp  automatic_login_helper.cpp  automatic_login_helper.hpp  book_for_deletion.hpp  book_info_helper.cpp  book_info_helper.hpp  book_info_manager.cpp  book_info_manager.hpp  book_merger.cpp  book_merger.hpp  book_metadata_helper.cpp  book_metadata_helper.hpp  book_storage_manager.cpp  book_storage_manager.hpp  book_utils.hpp  cover_observer.cpp  cover_observer.hpp  downloaded_books_tracker.cpp  downloaded_books_tracker.hpp  enum_utils.hpp  error_code_converter.hpp  external_book_getter.cpp  external_book_getter.hpp  internet_connection_info.cpp  internet_connection_info.hpp  library_book_getter.cpp  library_book_getter.hpp  library_storage_manager.cpp  library_storage_manager.hpp  local_library_tracker.cpp  merge_status.hpp  (+3 more)
src/controller/: CMakeLists.txt  controller.cpp  controller.hpp  test_request.cpp  test_request.hpp
src/domain/: AppInformation.hpp  CMakeLists.txt  domain_export.hpp  user.cpp  user.hpp
src/infrastructure/: CMakeLists.txt  test_class.cpp  test_class.hpp
src/model/: CMakeLists.txt  model.cpp  model.hpp
src/presentation/: CMakeLists.txt  FontSheet.qml  GlobalSettings.qml  Globals.qml  IconSheet.qml  LanguageModel.qml  MGlobalProperties.qml  PageNavigationLogic.js  StyleSheet.qml  TranslationsModel.qml  main.cpp  main.qml  qmlSources.qrc  qmlSourcesGeneral.qrc
src/view/: CMakeLists.txt  GlobalProperties.qml  MGlobalProperties.qml  main.qml
tests/: CMakeLists.txt  controllerTests.hpp  main.cpp  modelTests.hpp
tests/adapters_unit_tests/: CMakeLists.txt  authentication_controller_tests.hpp  authentication_gateway_tests.hpp  book_controller_tests.hpp  main.cpp  user_storage_gateway_tests.hpp
tests/application_unit_tests/: CMakeLists.txt  authentication_service_tests.hpp  book_info_helper_tests.hpp  book_service_tests.hpp  main.cpp
tests/domain_unit_tests/: CMakeLists.txt  book_tests.cpp  book_tests.hpp  login_model_tests.cpp  login_model_tests.hpp  main.cpp  register_model_tests.cpp  register_model_tests.hpp  tag_tests.cpp  tag_tests.hpp  user_tests.cpp  user_tests.hpp
tests/infrastructure_unit_tests/: CMakeLists.txt  main.cpp
(+1187 files in other folders)
